templates/deploy-mythaistar-java.yaml
apiVersion: v1
kind: List
items:

- kind: DeploymentConfig
  apiVersion: 'v1'
  metadata:
    labels:
      app: mythaistar
    name: mythaistar-java
  spec:
    replicas: 1
    
    selector:
      app: mythaistar-java
      deploymentconfig: mythaistar-java
    strategy:
      resources: {}
    
    template:
      metadata:
        labels:
          app: mythaistar-java
          deploymentconfig: mythaistar-java
      
      spec:
        containers:
          - env:
            - name: JAVA_APP_JAR
              value: mythaistar-bootified.war

            image: mythaistar-java:latest
            imagePullPolicy: Always
            name: mythaistar-java
            
            ports:
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
            - containerPort: 8081
              protocol: TCP
            resources: {}
    
    test: false
    
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - mythaistar-java
        from:
          kind: ImageStreamTag
          name: mythaistar-java:latest
      type: ImageChange

- kind: Service
  apiVersion: 'v1'
  metadata:
    labels:
      app: mythaistar-java
    name: mythaistar-java
  spec:
    ports:
    - name: 8081-tcp
      port: 8081
      protocol: TCP
      targetPort: 8081
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      app: mythaistar-java
      deploymentconfig: mythaistar-java
  status:
    loadBalancer: {}
