templates/deploy-mythaistar-angular.yaml
apiVersion: v1
kind: List
items:

- kind: DeploymentConfig
  apiVersion: 'v1'
  metadata:
    labels:
      app: mythaistar-angular
    name: mythaistar-angular
  spec:
    replicas: 1
    
    selector:
      app: mythaistar-angular
      deploymentconfig: mythaistar-angular
    strategy:
      resources: {}
    
    template:
      metadata:
        labels:
          app: mythaistar-angular
          deploymentconfig: mythaistar-angular
      
      spec:
        containers:
          - env:
            #- name: JAVA_APP_JAR
            #  value: mtsj-server-bootified.war

            image: mythaistar-angular:latest
            imagePullPolicy: Always
            
            name: mythaistar-angular
            
            ports:
            - containerPort: 8080
              protocol: TCP
            resources: {}
    
    test: false
    
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - mythaistar-angular
        from:
          kind: ImageStreamTag
          name: mythaistar-angular:latest
      type: ImageChange

- kind: Service
  apiVersion: 'v1'
  metadata:
    labels:
      app: mythaistar-angular
    name: mythaistar-angular
  spec:
    ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: mythaistar-angular
      deploymentconfig: mythaistar-angular
  status:
    loadBalancer: {}

- kind: Route
  apiVersion: "v1"
  metadata:
    name: 'mythaistar'
    annotations:
      kubernetes.io/tls-acme: "true"
  spec:
    to:
      kind: Service
      name: 'mythaistar-angular'
    port:
      targetPort: web
