templates/route-mythaistar-java.yaml
apiVersion: v1
items:

- kind: Route
  apiVersion: "v1"
  metadata:
    name: 'backend'
    annotations:
      kubernetes.io/tls-acme: "true"
  spec:
    to:
      kind: Service
      name: 'mythaistar-java'
    port:
      targetPort: 8081-tcp

kind: List
metadata: []
